# chitra_microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  start.sh
app/: config.py  main.py
app/models/: demucs_model.py  loader.py  speaker_embed.py
app/routers/: embedding.py  health.py  separation.py
app/runtime/: limiter.py
app/schemas/: audio.py
app/utils/: audio_io.py  vad.py
scripts/: measure_vram.py
tests/: test_concurrency.py  test_embedding.py  test_separation.py
