[project]
name = "chitra-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "silero-vad>=6.2.1",
    "soundfile>=0.14.0",
    "speechbrain>=1.1.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "nbconvert>=7.17.1",
    "pytest>=9.0.3",
]
